import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("flutter_helloworld") {
  main_dart = "lib/main.dart"

  meta = [
    {
      path = rebase_path("meta/flutter_helloworld.cmx")
      dest = "flutter_helloworld.cmx"
    },
  ]

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/fuchsia_scenic_flutter",
    "//topaz/public/dart/fuchsia_logger"
  ]
}
